fix_overflow

--- a/src/css/layout/section-gallery.css
+++ b/src/css/layout/section-gallery.css
@@ -1,3 +1,7 @@
+.body-overflow-hidden {
+  overflow: hidden;
+}
+
 .section-gallery {
   margin-top: 98px;
 }
